@@ -101,6 +101,11 @@ monster_skill_add_range: 15
 // Default 6 (mobs + pets)
 skillrange_by_distance: 6
 
+// Should weapon-based offensive skills use the equipped weapon's range rather than the range defined in skill_db? (Note 1)
+// NOTE: This setting only affects target-selectable offensive skills with a few exceptions
+//       (eg: Spear Boomerang, Grim Tooth, Acid Terror, etc)
+skillrange_from_weapon: no
+
 // Damaged delay rate for players (Note 2)
 // (Setting to no/0  will be like always endure)
 player_damage_delay_rate: 100
